# CppGambit

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  Readme.md  b
CMake/: FindSDL2.cmake
Include/Gambit/: JsonReader.hpp  Logger.hpp
Source/: Atlas.cpp  Logger.cpp  StringUtil.cpp
Test/: CMakeLists.txt
